refresh convo and fixes to messaging

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,3 +5,8 @@ md-dialog {
   margin-right: 0px !important;
   margin-left: 0px !important;
 }
+
+.receiver{
+  background-color: #0E68B3 !important;
+  color: white !important;
+}
