--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,3 +4,7 @@ md-dialog {
 .row {
   margin-right: 0px !important;
   margin-left: 0px !important; }
+
+.receiver {
+  background-color: #0E68B3 !important;
+  color: white !important; }
