populate pictures in home search

--- a/src/styles/search.scss
+++ b/src/styles/search.scss
@@ -1,7 +1,8 @@
 .user-search{
+    opacity: 10%;
     position: absolute;
     bottom: 5%;
-    right: 0;
+    right: 1%;
     height:450px;
     padding: 0 !important;
 
