--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -1,3 +1,8 @@
+.form-control {
+  border-right: 0;
+  border-left: 0;
+  border-radius: 0; }
+
 .user-search {
   opacity: 10%;
   position: absolute;
@@ -5,6 +10,8 @@
   right: 1%;
   height: 450px;
   padding: 0 !important; }
+  .user-search img {
+    width: 75%; }
   .user-search .user-select {
     width: 75px !important; }
   .user-search .form-control {
