--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -6,7 +6,7 @@
         color: white !important;
     }
     z-index:1;
-    position: absolute !important;
+    position: sticky;
     bottom: 0;
     background-color: #315179 !important;
   }
