WIP style nav bars

--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -6,7 +6,7 @@
         color: white !important;
     }
     z-index:1;
-    position: sticky;
-    bottom: 0;
-    background-color: #315179 !important;
+    position: fixed !important;
+    bottom: 0 !important;
+    background-color: rgba(34, 70, 113, 0.94) !important;
   }
