--- a/src/styles/search.scss
+++ b/src/styles/search.scss
@@ -7,9 +7,10 @@
 .user-search{
     opacity: 10%;
     position: absolute;
-    bottom: 5%;
+    /* bottom: 18%; */
+		top: 20px;
     right: 1%;
-    height:450px;
+    height:98%;
     padding: 0 !important;
   
     img{
