--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -6,9 +6,10 @@
 .user-search {
   opacity: 10%;
   position: absolute;
-  bottom: 5%;
+  /* bottom: 18%; */
+  top: 20px;
   right: 1%;
-  height: 450px;
+  height: 98%;
   padding: 0 !important; }
   .user-search img {
     width: 75%; }
