fun with CSS and nav bar

--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -2,8 +2,8 @@
   z-index: 1;
   position: fixed !important;
   bottom: 0 !important;
-  background-color: rgba(34, 70, 113, 0.94) !important; }
+  background-color: #fafafa !important; }
   .bottom-nav .material-icons {
-    color: white !important; }
+    display: none !important; }
   .bottom-nav div {
-    color: white !important; }
+    color: darkgray !important; }
