--- a/src/styles/search.scss
+++ b/src/styles/search.scss
@@ -1,3 +1,6 @@
+
+@import url("//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css");
+
 .form-control{
   border-right: 0;
   border-left: 0;
@@ -9,13 +12,17 @@
   background-color: #edeeef;
 }
 
+.user-select {
+  width: 75px !important; 
+}
+
 .horizontal-scroll{
   display: flex;
   min-width: 100%;
   overflow-x: auto;
   white-space: nowrap;
   .property-pic{
-    min-width: 450px;
+    min-width: 100%;
     display: inline-block;
     vertical-align: middle
   }
@@ -28,13 +35,24 @@
     right: 1%;
     height:98%;
     padding: 0 !important;
+
+    .search-input{
+      position: relative;
+      .fa{
+        position: absolute;
+        margin-left: 85%;
+        font-size: 2.6rem;
+        margin-top: 2%;
+        color: #717171;
+      }
+    }
   
     img{
       width: 100%;
     }
 
-    .user-select{
-        width: 75px !important;
+    #micasa-logo{
+      width: 75%;
     }
 
     .form-control{
