--- a/src/styles/picbox.scss
+++ b/src/styles/picbox.scss
@@ -1,7 +1,7 @@
 
 .house-pics{
     overflow: scroll;
-    height: 440px;
+    height: 100vh;
     background-color: #edeeef;
     img{
         width: 100%;
@@ -20,7 +20,10 @@
         }
     }
     .house-address{
+        white-space: nowrap; 
+        overflow: hidden;
         color: #acacac;
+        text-overflow: ellipsis;
     }
     .house-beds{
         margin-left: 5%;
