add bathrooms to search bar

--- a/src/styles/picbox.css
+++ b/src/styles/picbox.css
@@ -1,6 +1,6 @@
 .house-pics {
   overflow: scroll;
-  height: 100vh;
+  height: 475px;
   background-color: #edeeef; }
   .house-pics img {
     width: 100%; }
