--- a/src/styles/search.scss
+++ b/src/styles/search.scss
@@ -60,7 +60,7 @@
     }
 
     .header{
-      filter-gradient: (#1e5799, #7db9e8, vertical); // IE6-9
+      filter-gradient: (#1e5799, #7db9e8, vertical); 
       background-image: (linear-gradient(left, #1e5799 0%,#2989d8 67%,#7db9e8 100%));
       color: white;
       padding: 15px;
