--- a/src/styles/search.scss
+++ b/src/styles/search.scss
@@ -22,7 +22,7 @@
   overflow-x: auto;
   white-space: nowrap;
   .property-pic{
-    min-width: 100%;
+    min-width: 50%;
     display: inline-block;
     vertical-align: middle
   }
@@ -33,9 +33,8 @@
     position: absolute;
 		top: 20px;
     right: 1%;
-    height:98%;
     padding: 0 !important;
-
+    height: 100vh;
     .search-input{
       position: relative;
       .fa{
@@ -61,7 +60,7 @@
 
     .header{
       filter-gradient: (#1e5799, #7db9e8, vertical); 
-      background-image: (linear-gradient(left, #1e5799 0%,#2989d8 67%,#7db9e8 100%));
+      background-image: (linear-gradient(left, #315a8f 0%,#4e74a4 67%,#6286b3 100%));
       color: white;
       padding: 15px;
     }
