message functionality from property details page

--- a/src/styles/propertyInfo.scss
+++ b/src/styles/propertyInfo.scss
@@ -28,6 +28,10 @@
             text-transform: capitalize;
         }
     }
+
+    .details-property-type{
+        text-transform: capitalize;
+    }
 }
 
 .btn-offer{
