--- a/src/styles/propertyInfo.css
+++ b/src/styles/propertyInfo.css
@@ -15,6 +15,8 @@
     .details .description p {
       color: #5b6067;
       text-transform: capitalize; }
+  .details .details-property-type {
+    text-transform: capitalize; }
 
 .btn-offer {
   width: 70%;
