--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -1,12 +1,12 @@
-.bottom-nav{
-    .material-icons{
-      display: none !important;
+.bottom-nav {
+    .material-icons {
+        display: none !important;
     }
-    div{
-        color: darkgray !important;
+    div {
+        border-right: 1px solid lightgray;
     }
-    z-index:1;
+    z-index: 1;
     position: fixed !important;
     bottom: 0 !important;
     background-color: #fafafa !important;
-  }
+}
