--- a/src/styles/propertyInfo.scss
+++ b/src/styles/propertyInfo.scss
@@ -1,61 +1,59 @@
-
-.details-main-img{
+.details-main-img {
     width: 100%;
 }
 
-.details{
+.details {
     margin-left: 2%;
-    .property-details{
-        .fa{
+    .property-details {
+        .fa {
             color: gray;
-        }    
-        span{
+        }
+        span {
             margin-right: 2%;
         }
     }
-    
-    .address-details{
-        h3{
+
+    .address-details {
+        h3 {
             color: #355d91;
             margin-top: 3%;
         }
     }
 
-    .description{
+    .description {
         margin-top: 3%;
-        p{
+        p {
             color: #5b6067;
             text-transform: capitalize;
         }
     }
 
-    .details-property-type{
+    .details-property-type {
         text-transform: capitalize;
     }
 }
 
-.btn-offer{
+.btn-offer {
     width: 70%;
     background-color: #25b797 !important;
     color: white;
 }
 
-.btn-toolbar{
+.btn-toolbar {
     display: flex !important;
     justify-content: center !important;
 }
 
-.contact{
+.contact {
     border: 1px solid #d5dae1;
     text-align: center;
     background-color: #f9fbfe;
-    h2{
+    h2 {
         margin-top: 10%;
         color: #355d91;
     }
-    button{
+    button {
         border: 1px solid #d5dae1;
-        margin: 1%
+        margin: 1%;
     }
 }
-
