--- a/src/styles/top-nav.css
+++ b/src/styles/top-nav.css
@@ -1,9 +1,13 @@
 .top-nav {
   border-bottom: 1px solid #d5dae1;
+  position: -webkit-sticky;
   position: sticky;
   top: 0;
-  z-index: 1;
-  background-color: white; }
+  z-index: 10;
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem 0.5rem; }
   .top-nav .nav-options {
     display: flex;
     flex-direction: row;
