--- a/src/styles/addProperty.css
+++ b/src/styles/addProperty.css
@@ -26,5 +26,33 @@
   width: 80%; }
 
 .no-border {
-  border: none;
-  margin-left: 1rem; }
+  border: none; }
+
+.edit-price {
+  font-size: 1.5rem; }
+  .edit-price img {
+    width: 1.5rem; }
+
+.edit-property-details {
+  display: flex; }
+  .edit-property-details select {
+    background-color: white !important;
+    border: none !important;
+    font-size: 0.8rem;
+    margin: 0 1.5rem;
+    color: gray !important; }
+  .edit-property-details option {
+    color: gray !important; }
+  .edit-property-details span {
+    color: gray; }
+
+.edit-sqfeet,
+.edit-sqfeet-lot {
+  margin: 0 1.5rem;
+  font-size: 0.8rem; }
+  .edit-sqfeet input,
+  .edit-sqfeet-lot input {
+    width: 3.5rem; }
+  .edit-sqfeet img,
+  .edit-sqfeet-lot img {
+    width: 0.7rem; }
