--- a/src/styles/addProperty.css
+++ b/src/styles/addProperty.css
@@ -12,12 +12,12 @@
     font-size: 1.2rem;
     font-weight: 400; }
 
-.property-info {
+.add-property-info {
   background-color: #f9fbfe; }
-  .property-info p {
+  .add-property-info p {
     color: #4a6f9d; }
-  .property-info input[type="text"],
-  .property-info textarea {
+  .add-property-info input[type="text"],
+  .add-property-info textarea {
     background-color: #f9fbfe; }
 
 #address {
@@ -30,6 +30,8 @@
 
 .edit-price {
   font-size: 1.5rem; }
+  .edit-price input {
+    width: 8.5rem; }
   .edit-price img {
     width: 1.5rem; }
 
@@ -39,7 +41,7 @@
     background-color: white !important;
     border: none !important;
     font-size: 0.8rem;
-    margin: 0 1.5rem;
+    margin: 0 0.5rem;
     color: gray !important; }
   .edit-property-details option {
     color: gray !important; }
@@ -52,7 +54,7 @@
   font-size: 0.8rem; }
   .edit-sqfeet input,
   .edit-sqfeet-lot input {
-    width: 3.5rem; }
+    width: 2.25rem; }
   .edit-sqfeet img,
   .edit-sqfeet-lot img {
     width: 0.7rem; }
