--- a/src/styles/addProperty.scss
+++ b/src/styles/addProperty.scss
@@ -74,3 +74,20 @@
         width: 0.7rem;
     }
 }
+
+.saveDraft-publish-buttons {
+    text-align: right;
+    margin: 0.6rem;
+
+    button {
+        margin: 0.4rem;
+        padding: 0.4rem 4rem;
+        border-radius: 0.3rem;
+    }
+
+    #pubButton {
+        background-color: #25b797 !important;
+        color: #f9fbfe;
+    }
+    
+}
