--- a/src/styles/breadcrumb-nav.scss
+++ b/src/styles/breadcrumb-nav.scss
@@ -1,83 +1,83 @@
 footer {
-  width:100%;
-  height:50;
-  display:block;
-  position:fixed;
-  bottom:0;
-  background-color: grey;
-  letter-spacing: .05em;
-  div{
-    position:fixed;
-    bottom:0;
-    display:block;
-    height:56px;
-    width:100% !important;
-    background-color:#F5F5F5 !important;
-  }
+    width: 100%;
+    height: 50;
+    display: block;
+    position: fixed;
+    bottom: 0;
+    background-color: grey;
+    letter-spacing: 0.05em;
+    div {
+        position: fixed;
+        bottom: 0;
+        display: block;
+        height: 56px;
+        width: 100% !important;
+        background-color: #f5f5f5 !important;
+    }
+    z-index: 1;
 }
 
 nav {
-  margin-left:12%;
-  display: table;
-  overflow: hidden;
-  width: 76%;
-  background: grey;
+    margin-left: 12%;
+    display: table;
+    overflow: hidden;
+    width: 76%;
+    background: grey;
 }
 
 ol {
-  display: table-row;
-  list-style: none;
-  text-align: center;
-  width:100% !important;
-  background-color:#F5F5F5 !important;
+    display: table-row;
+    list-style: none;
+    text-align: center;
+    width: 100% !important;
+    background-color: #f5f5f5 !important;
 }
 
 li {
-  display: table-cell;
-  vertical-align: middle;
-  width: 20%;
+    display: table-cell;
+    vertical-align: middle;
+    width: 20%;
 }
 
-a {
-  font-size: 1rem;
-  font-weight: 500;
-  display: block;
-  padding: 18px 0;
-  position: relative;
-  white-space: nowrap;
-  color:dimgrey !important;
-  background:#F5F5F5;
+.crumb-link {
+    font-size: 0.8rem;
+    font-weight: 100;
+    display: block;
+    padding: 18px 0;
+    position: relative;
+    white-space: nowrap;
+    color: dimgrey !important;
+    background: #f5f5f5;
 }
 
-a::after {
-  background:transparent;
-  border-radius: 0 0 0 0;
-  box-shadow: 3.5px -4.5px 0px 0px 	#D2D2D2;
-  content: "";
-  height: 50px;
-  position: absolute;
-  right: -21px;
-  top: -4px;
-  transform: scale(0.70) rotate(19deg) skewY(52deg);
-  width: 48px;
-  z-index: 1;
+.crumb-link::after {
+    background: transparent;
+    border-radius: 0 0 0 0;
+    box-shadow: 1.5px -1.5px 0px 0px #d2d2d2;
+    content: "";
+    height: 50px;
+    position: absolute;
+    right: -21px;
+    top: -4px;
+    transform: scale(0.7) rotate(19deg) skewY(52deg);
+    width: 48px;
+    z-index: 1;
 }
-
 
 a:link,
 a:visited,
 a:hover,
 a:active,
 a:focus {
-  color: #4e74a4 !important;
-  text-decoration: none;
-  cursor:pointer
+    color: #4e74a4 !important;
+    text-decoration: none;
+    cursor: pointer;
 }
 
-.active{
-  font-size: 1.35rem;
-  padding: 20px;
-  fontsize: 40px;
-  color: rgb(0, 188, 212) !important;
-  text-decoration: none;
+.active {
+    font-size: 1.35rem;
+    padding: 20px;
+    fontsize: 40px;
+    color: rgb(0, 188, 212) !important;
+    text-decoration: none;
 }
