years dropdown and css changes

--- a/src/styles/addProperty.css
+++ b/src/styles/addProperty.css
@@ -48,6 +48,9 @@
   .edit-property-details span {
     color: gray; }
 
+span {
+  font-size: 0.8rem; }
+
 .edit-sqfeet,
 .edit-sqfeet-lot {
   margin: 0 1.5rem;
