--- a/src/styles/FillOutProfile.css
+++ b/src/styles/FillOutProfile.css
@@ -15,3 +15,16 @@
   max-width: 200px;
   max-height: 115px;
   padding-top: 15px; }
+
+::placeholder {
+  color: black; }
+
+input {
+  border: none;
+  min-width: 183px;
+  text-align: center; }
+
+button {
+  border: none;
+  background-color: none;
+  cursor: pointer; }
