--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -5,8 +5,11 @@
 h1 {
     font-weight: 100;
 }
-
 .section-title {
     font-size: 1.5rem;
     font-weight: 500;
+}
+
+.borderless {
+    border: none !important;
 }
