offer section styling, currency formatter

--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -16,4 +16,13 @@ h1 {
   border: none !important; }
 
 .offer-info {
-  display: flex; }
+  display: flex;
+  align-items: center; }
+
+.user-pic {
+  width: 100%;
+  height: 100%; }
+
+.x-small {
+  font-size: 0.2rem;
+  margin-bottom: 0.1rem; }
