WIP on features section

--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -9,7 +9,8 @@ h1 {
   font-size: 1.5rem;
   font-weight: 500; }
 
-.dashboard {
+.dashboard,
+.buyer-dash {
   margin-bottom: 10%; }
 
 .borderless {
