Feature/offers section (#28)
* WIP on offers section

* WIP on offer section

* WIP on offers section

* WIP on offer section

* update style, WIP on offers

* offer section styling, currency formatter

* WIP on features section

* only show upload profile pic box if none uploaded, ditto for phone number

* show finished state for disclosure agreement

* redux action to remove map markers, make input checkboxes disabled

* chat box dialog modal from review offers component

* remove console log for slack integration test

--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -10,6 +10,26 @@ h1 {
     font-weight: 500;
 }
 
+.dashboard,
+.buyer-dash {
+    margin-bottom: 10%;
+}
+
 .borderless {
     border: none !important;
+}
+
+.offer-info {
+    display: flex;
+    align-items: center;
+}
+
+.user-pic {
+    width: 100%;
+    height: 100%;
+}
+
+.x-small {
+    font-size: 0.2rem;
+    margin-bottom: 0.1rem;
 }
