--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -9,5 +9,21 @@ h1 {
   font-size: 1.5rem;
   font-weight: 500; }
 
+.dashboard,
+.buyer-dash {
+  margin-bottom: 10%; }
+
 .borderless {
   border: none !important; }
+
+.offer-info {
+  display: flex;
+  align-items: center; }
+
+.user-pic {
+  width: 100%;
+  height: 100%; }
+
+.x-small {
+  font-size: 0.2rem;
+  margin-bottom: 0.1rem; }
