--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -34,3 +34,11 @@ h1 {
     font-size: 0.2rem;
     margin-bottom: 0.1rem;
 }
+
+.rocket-mortgage {
+    background-color: #215392;
+    width: 20%;
+    color: white;
+    text-align: center;
+    padding: 1rem;
+}
