show documents and profile pic once uploaded, link to rocket mortgage, only show publish a listing

--- a/src/styles/addProperty.css
+++ b/src/styles/addProperty.css
@@ -28,6 +28,10 @@
 .no-border {
   border: none; }
 
+#sqFeet,
+#sqFeetLot {
+  color: gray !important; }
+
 .edit-price {
   font-size: 1.5rem; }
   .edit-price input {
