--- a/src/styles/addProperty.scss
+++ b/src/styles/addProperty.scss
@@ -36,6 +36,11 @@
     border: none;
 }
 
+#sqFeet,
+#sqFeetLot {
+    color: gray !important;
+}
+
 .edit-price {
     input {
         width: 8.5rem;
