--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -8,3 +8,30 @@ h1 {
 .section-title {
   font-size: 1.5rem;
   font-weight: 500; }
+
+.dashboard,
+.buyer-dash {
+  margin-bottom: 10%; }
+
+.borderless {
+  border: none !important; }
+
+.offer-info {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1%; }
+
+.user-pic {
+  width: 100%;
+  height: 100%; }
+
+.x-small {
+  font-size: 0.2rem;
+  margin-bottom: 0.1rem; }
+
+.rocket-mortgage {
+  background-color: #215392;
+  width: 20%;
+  color: white;
+  text-align: center;
+  padding: 1rem; }
