--- a/src/styles/breadcrumb-nav.css
+++ b/src/styles/breadcrumb-nav.css
@@ -1,5 +1,6 @@
 footer {
-  width: 100%;
+  margin: auto;
+  width: 80%;
   height: 50;
   display: block;
   position: fixed;
@@ -22,7 +23,7 @@ nav {
   width: 76%;
   background: grey; }
 
-ol {
+ul {
   display: table-row;
   list-style: none;
   text-align: center;
