--- a/src/styles/picbox.scss
+++ b/src/styles/picbox.scss
@@ -1,9 +1,37 @@
+.half-circle {
+    position: absolute;
+    z-index: 100;
+    width: 50%;
+    height: 100%;
+}
+
+.half-circle:after {
+    background: transparent;
+    position: absolute;
+    transform: scale(0.7) rotate(19deg) skewY(52deg);
+    box-shadow: 1.5px -1.5px 0px 0px #d2d2d2;
+    content: "";
+    height: 100%;
+    border-radius: 0 0 0 0;
+    z-index: 500;
+}
+
+.property-wrapper {
+    border-bottom: 1px solid #ced4da;
+}
+
 .house-pics {
+    //temporary css
+    width: 70%;
+    margin-left: auto;
+    padding-bottom: 3rem;
+    //end
     overflow: scroll;
-    height: calc(100vh - 165px);
+    // height: calc(100vh - 165px);
     background-color: #edeeef;
     img {
-        width: 50%;
+        width: 98%;
+        height: 100%;
     }
     span {
         margin: 2%;
