styling changes to listing view

--- a/src/styles/picbox.css
+++ b/src/styles/picbox.css
@@ -1,8 +1,11 @@
 .half-circle {
-  position: absolute;
-  z-index: 100;
-  width: 50%;
-  height: 100%; }
+  background: transparent;
+  position: relative;
+  height: 16em;
+  width: 16em;
+  border-radius: 50%;
+  box-shadow: 4em 0.5em 0 1em #fff, 6em 0 3em rgba(255, 255, 255, 0.3);
+  transform: rotate(180deg) translateX(3em); }
 
 .half-circle:after {
   background: transparent;
@@ -18,7 +21,7 @@
   border-bottom: 1px solid #ced4da; }
 
 .house-pics {
-  width: 70%;
+  width: 60%;
   margin-left: auto;
   padding-bottom: 3rem;
   overflow: scroll;
