--- a/src/styles/picbox.css
+++ b/src/styles/picbox.css
@@ -1,9 +1,34 @@
+.half-circle {
+  background: transparent;
+  position: relative;
+  height: 16em;
+  width: 16em;
+  border-radius: 50%;
+  box-shadow: 4em 0.5em 0 1em #fff, 6em 0 3em rgba(255, 255, 255, 0.3);
+  transform: rotate(180deg) translateX(3em); }
+
+.half-circle:after {
+  background: transparent;
+  position: absolute;
+  transform: scale(0.7) rotate(19deg) skewY(52deg);
+  box-shadow: 1.5px -1.5px 0px 0px #d2d2d2;
+  content: "";
+  height: 100%;
+  border-radius: 0 0 0 0;
+  z-index: 500; }
+
+.property-wrapper {
+  border-bottom: 1px solid #ced4da; }
+
 .house-pics {
+  width: 60%;
+  margin-left: auto;
+  padding-bottom: 3rem;
   overflow: scroll;
-  height: calc(100vh - 165px);
   background-color: #edeeef; }
   .house-pics img {
-    width: 50%; }
+    width: 98%;
+    height: 100%; }
   .house-pics span {
     margin: 2%; }
 
