add file upload component and styling

--- a/src/components/Question/styles/question.css
+++ b/src/components/Question/styles/question.css
@@ -1,6 +1,7 @@
 .question-body {
   margin: auto;
-  text-align: center; }
+  text-align: center;
+  margin-top: 5em; }
 
 .options-container {
   display: flex;
@@ -23,7 +24,8 @@
   box-sizing: border-box;
   border: 1px solid gray;
   border-radius: 16px;
-  margin: 0.25em; }
+  margin: 0.25em;
+  padding: 0 0.5em; }
   .multi-options:hover {
     cursor: pointer; }
 
