--- a/src/styles/picbox.css
+++ b/src/styles/picbox.css
@@ -21,10 +21,8 @@
   border-bottom: 1px solid #ced4da; }
 
 .house-pics {
-  width: 60%;
-  margin-left: auto;
-  padding-bottom: 3rem;
   overflow: scroll;
+  height: calc(100vh - 165px);
   background-color: #edeeef; }
   .house-pics img {
     width: 98%;
