--- a/src/pages/Wizard/styles/wizard.scss
+++ b/src/pages/Wizard/styles/wizard.scss
@@ -16,7 +16,7 @@
     position: absolute;
     width: 100%;
     height: 100vh;
-    background-image: url("https://s3-alpha-sig.figma.com/img/c8f2/aad3/af00362fddc6cd6d75111196f4f2fc8c?Expires=1574640000&Signature=T0igBjazXZsqAUW3ppHHArMAwS-FwNY-itD-4muqe~So9ozSDuT4mau2ArZUXqK~2fjxXQ2GAF9e4AxK5mjewkYZv-dslRYhPxMJ6LjEgIom1pfNwzcctBEg1bqU55pAiCp4wvOJIi9EXLajhnvWueCCulLLLfYpR-l8BIb8eRz2LXGAdDgvLYIfmWuYMhVRkVohZVD1TgP10anPLHuz9ewX4xQsTDD~BJmJZ~oUFqQ23dqZoJtyniEH48jtdc9KR64nr7Dm9g25O3JDXDD81kRrAlXN0d5lKkG0g56WmvFCfwWdNd0~YuuPGZp2BD-xWXclnyfG2iLR1-1WFrk1Mg__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA");
+    background-image: url("https://s3-alpha-sig.figma.com/img/c8f2/aad3/af00362fddc6cd6d75111196f4f2fc8c?Expires=1581897600&Signature=hTWtMArKJsOJxXRvmyUdbk0IstMwybv9jFBiEFgCVw2JE4g0GqUVOdYmFQ9W8nuHcoqE6SBn3VFIwhaD4SNlf8HU1IfmFWucAoL8lyYWWl7c6dqheCFRMDjwSNLwiH0IqaEk5s3bK9MgFCrw13nLaTtExw5O6UigdNl9MsflonMwv272blHF-b93ojkpZdk~5Q5UI37l01KEpjJ0OGZYSxVyAbr~NALqt7uRcXsFVWe40JisXXotfp1v0E7R2vbDujqntSqGbIqR8lvdOyxE9G9omhnsiCXZNxZh3j2cUph-PLqEvh8WZ~5Rve26g-i8zSF16SM93cLyOL5w-t7YYg__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA");
 }
 
 .progress-bar-container {
