--- a/src/components/Question/styles/question.css
+++ b/src/components/Question/styles/question.css
@@ -21,11 +21,14 @@
     cursor: pointer; }
 
 .multi-options {
-  box-sizing: border-box;
   border: 1px solid gray;
-  border-radius: 16px;
   margin: 0.25em;
-  padding: 0 0.5em; }
+  padding: 0 0.5em;
+  color: white;
+  mix-blend-mode: normal;
+  opacity: 0.07;
+  width: 7em;
+  border-radius: 40px; }
   .multi-options:hover {
     cursor: pointer; }
 
