--- a/src/pages/BuyerWizard/styles/BuyerWizard.scss
+++ b/src/pages/BuyerWizard/styles/BuyerWizard.scss
@@ -11,15 +11,14 @@
 	color: white;
 	background: linear-gradient(0deg, rgba(255, 255, 255, 0.148683), rgba(255, 255, 255, 0.148683));
 	backdrop-filter: blur(19.028px);
-
-	.wise-owl {
-		margin-top: -4em;
-		img {
-			display: block;
-			margin: auto;
-			width: 8em;
-		}
-	}
+}
+.wizard-body .wise-owl {
+	margin-top: -4em;
+}
+.wizard-body .wise-owl img {
+	display: block;
+	margin: auto;
+	width: 8em;
 }
 
 .wizard-backdrop {
@@ -45,7 +44,7 @@
 
 i {
 	color: gray;
-	&:hover {
-		cursor: pointer;
-	}
+}
+i:hover {
+	cursor: pointer;
 }
