--- a/src/components/Question/styles/question.css
+++ b/src/components/Question/styles/question.css
@@ -23,12 +23,13 @@
 .multi-options {
   border: 1px solid gray;
   margin: 0.25em;
-  padding: 0 0.5em;
+  padding: 0.5em;
+  background-color: transparent;
   color: white;
-  mix-blend-mode: normal;
-  opacity: 0.07;
   width: 7em;
   border-radius: 40px; }
+  .multi-options p {
+    margin-bottom: 0; }
   .multi-options:hover {
     cursor: pointer; }
 
