--- a/src/components/Question/styles/question.scss
+++ b/src/components/Question/styles/question.scss
@@ -1,65 +1,64 @@
 .question-body {
-	margin: auto;
-	text-align: center;
-	margin-top: 5em;
+    margin: auto;
+    text-align: center;
+    margin-top: 5em;
 }
 
 .options-container {
-	display: flex;
-	justify-content: center;
-	margin-top: 1em;
-	align-items: center;
+    display: flex;
+    justify-content: center;
+    margin-top: 1em;
+    align-items: center;
 }
 
 .oval-options {
-	box-sizing: border-box;
-	border: 1px solid gray;
-	border-radius: 50%;
-	height: 95px;
-	width: 95px;
-	line-height: 85px;
-	margin: 1em;
-	&:hover {
-		cursor: pointer;
-	}
+    box-sizing: border-box;
+    border: 1px solid gray;
+    border-radius: 50%;
+    height: 95px;
+    width: 95px;
+    line-height: 85px;
+    margin: 1em;
+    &:hover {
+        cursor: pointer;
+    }
 }
 
 .multi-options {
-	border: 1px solid gray;
-	margin: 0.25em;
-	padding: 0 0.5em;
-	color: white;
-	mix-blend-mode: normal;
-	opacity: 0.07;
-	width: 7em;
-	border-radius: 40px;
-	&:hover {
-		cursor: pointer;
-	}
+    border: 1px solid gray;
+    margin: 0.25em;
+    padding: 0.5em;
+    background-color: transparent;
+    color: white;
+    width: 7em;
+    border-radius: 40px;
+    p {
+        margin-bottom: 0;
+    }
+    &:hover {
+        cursor: pointer;
+    }
 }
 
 .free-text {
-	border: 1px solid gray;
-	border-radius: 16px;
-	margin-right: 0.25em;
+    border: 1px solid gray;
+    border-radius: 16px;
+    margin-right: 0.25em;
 }
 
 .text-submit {
-	height: 30px;
-	width: 30px;
-	border: 1px solid gray;
-	border-radius: 50%;
-	line-height: 40px;
-	&:hover {
-		cursor: pointer;
-	}
+    height: 30px;
+    width: 30px;
+    border: 1px solid gray;
+    border-radius: 50%;
+    line-height: 40px;
+    &:hover {
+        cursor: pointer;
+    }
 }
 
 .text-container {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-
-.question-header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
