--- a/src/styles/breadcrumb-nav.css
+++ b/src/styles/breadcrumb-nav.css
@@ -1,84 +1,71 @@
 footer {
-	margin: auto;
-	width: 80%;
-	height: 50;
-	display: block;
-	position: fixed;
-	bottom: 0;
-	background-color: grey;
-	letter-spacing: 0.05em;
-	z-index: 1;
-}
-footer div {
-	position: fixed;
-	bottom: .5em;
-	display: block;
-	height: 56px;
-	min-width: 1000px;
-	background-color: #f5f5f5 !important;
-	text-transform: capitalize;
-	width: 95%;
-	left: 0;
-	right: 0;
-	margin-right: auto;
-	margin-left: auto;
-	border-radius: .25em;
-}
-
-.micasa-nav-logo {
-	width: 5em;
-}
+  width: 100%;
+  height: 50;
+  display: block;
+  position: fixed;
+  bottom: 0;
+  background-color: grey;
+  letter-spacing: 0.05em;
+  display: flex;
+  justify-content: center;
+  z-index: 1; }
+  footer div {
+    margin-bottom: 1em;
+    position: fixed;
+    bottom: 0;
+    display: block;
+    height: 56px;
+    width: 90%;
+    background-color: #f5f5f5;
+    border-radius: 1em; }
 
 nav {
-	margin-left: 12%;
-	display: table;
-	overflow: hidden;
-	width: 76%;
-}
+  display: table;
+  overflow: hidden;
+  width: 100%;
+  border-radius: 1em; }
 
 ul {
-	display: table-row;
-	list-style: none;
-	text-align: center;
-	width: 100% !important;
-	background-color: #f5f5f5 !important;
-}
+  display: table-row;
+  list-style: none;
+  text-align: center;
+  width: 100% !important;
+  background-color: #f5f5f5 !important; }
 
 li {
-	display: table-cell;
-	vertical-align: middle;
-}
+  display: table-cell;
+  vertical-align: middle; }
 
 .pop-over-item {
-	padding: 0.25rem 1rem;
-	display: block;
-}
+  padding: 0.25rem 1rem;
+  display: block; }
 
 .crumb-link {
-	font-size: 0.8rem;
-	font-weight: 100;
-	display: block;
-	padding: 18px 0;
-	position: relative;
-	white-space: nowrap;
-	color: dimgrey !important;
-	background: #f5f5f5;
-}
+  font-size: 0.8rem;
+  font-weight: 100;
+  display: block;
+  padding: 18px 0;
+  position: relative;
+  white-space: nowrap;
+  color: dimgrey !important;
+  background: #f5f5f5; }
+
+.micasa-nav-logo {
+  width: 80px; }
 
 a:link,
 a:visited,
 a:hover,
 a:active,
 a:focus {
-	color: #4e74a4 !important;
-	text-decoration: none;
-	cursor: pointer;
-}
+  color: #4e74a4 !important;
+  text-decoration: none;
+  cursor: pointer;
+  text-transform: uppercase; }
 
 .active {
-	font-size: 1.35rem;
-	padding: 20px;
-	fontsize: 40px;
-	color: #00bcd4 !important;
-	text-decoration: none;
-}
+  font-size: 1.35rem;
+  padding: 20px;
+  fontsize: 40px;
+  color: #00bcd4 !important;
+  text-decoration: none; }
