--- a/src/styles/breadcrumb-nav.scss
+++ b/src/styles/breadcrumb-nav.scss
@@ -1,29 +1,31 @@
 footer {
-    margin: auto;
-    width: 80%;
+    width: 100%;
     height: 50;
     display: block;
     position: fixed;
     bottom: 0;
     background-color: grey;
     letter-spacing: 0.05em;
+    display: flex;
+    justify-content: center;
     div {
+        margin-bottom: 1em;
         position: fixed;
         bottom: 0;
         display: block;
         height: 56px;
-        width: 100% !important;
-        background-color: #f5f5f5 !important;
+        width: 90%;
+        background-color: #f5f5f5;
+        border-radius: 1em;
     }
     z-index: 1;
 }
 
 nav {
-    margin-left: 12%;
     display: table;
     overflow: hidden;
-    width: 76%;
-    background: grey;
+    width: 100%;
+    border-radius: 1em;
 }
 
 ul {
@@ -37,7 +39,6 @@ ul {
 li {
     display: table-cell;
     vertical-align: middle;
-    width: 20%;
 }
 
 .pop-over-item {
@@ -56,6 +57,10 @@ li {
     background: #f5f5f5;
 }
 
+.micasa-nav-logo {
+    width: 80px;
+}
+
 a:link,
 a:visited,
 a:hover,
@@ -64,6 +69,7 @@ a:focus {
     color: #4e74a4 !important;
     text-decoration: none;
     cursor: pointer;
+    text-transform: uppercase;
 }
 
 .active {
