--- a/src/pages/BuyerWizard/styles/BuyerWizard.css
+++ b/src/pages/BuyerWizard/styles/BuyerWizard.css
@@ -1,57 +1,45 @@
 .wizard-body {
-    width: 75%;
-    margin-left: auto;
-    margin-right: auto;
-    height: 75vh;
-    border: 1px solid gray;
-    padding: 1.5em;
-    position: relative;
-    margin-top: 3.5em;
-    border-radius: 5px;
-    color: white;
-    background: linear-gradient(
-        0deg,
-        rgba(255, 255, 255, 0.148683),
-        rgba(255, 255, 255, 0.148683)
-    );
-    backdrop-filter: blur(19.028px);
-}
+  width: 75%;
+  margin-left: auto;
+  margin-right: auto;
+  height: 75vh;
+  border: 1px solid gray;
+  padding: 1.5em;
+  position: relative;
+  margin-top: 3.5em;
+  border-radius: 5px;
+  color: white;
+  background: linear-gradient(0deg, rgba(255, 255, 255, 0.148683), rgba(255, 255, 255, 0.148683));
+  backdrop-filter: blur(19.028px); }
 
 .wizard-body .wise-owl {
-    margin-top: -4em;
-}
+  margin-top: -4em; }
 
 .wizard-body .wise-owl img {
-    display: block;
-    margin: auto;
-    width: 8em;
-}
+  display: block;
+  margin: auto;
+  width: 8em; }
 
 .wizard-backdrop {
-    position: absolute;
-    width: 100%;
-    height: 100vh;
-}
+  position: absolute;
+  width: 100%;
+  height: 100vh; }
 
 .progress-bar-container {
-    position: absolute;
-    bottom: 20px;
-    left: 0;
-    right: 0;
-    display: flex;
-    width: 80%;
-    margin: auto;
-}
+  position: absolute;
+  bottom: 20px;
+  left: 0;
+  right: 0;
+  display: flex;
+  width: 80%;
+  margin: auto; }
 
 .progress-line {
-    width: 88%;
-    margin: auto;
-}
+  width: 88%;
+  margin: auto; }
 
 i {
-    color: white;
-}
+  color: gray; }
 
 i:hover {
-    cursor: pointer;
-}
+  cursor: pointer; }
