--- a/src/styles/listHome.scss
+++ b/src/styles/listHome.scss
@@ -1,9 +1,33 @@
 .add-listing {
     background: none;
-    border: 1px solid gray;
+    border: 1px solid #dfe7f0;
     border-radius: 0.15em;
-    padding: 0 1em;
+    padding: 5px 3.5em;
+    margin-left: 10px;
     &:hover {
         cursor: pointer;
+    }
+}
+
+.edit-current-home {
+    display: flex;
+
+    .list-home-info {
+        border-top-right-radius: 0.5em;
+        border-bottom-right-radius: 0.5em;
+        border: 1px solid #dfe7f0;
+        padding: 1em 5em 0 3em;
+    }
+}
+
+.cutoff {
+    background-image: -webkit-linear-gradient(
+        145deg,
+        transparent 50%,
+        white 50%
+    );
+    position: absolute;
+    img {
+        height: 40px;
     }
 }
