--- a/src/components/Question/styles/question.css
+++ b/src/components/Question/styles/question.css
@@ -9,6 +9,12 @@
   margin-top: 1em;
   align-items: center; }
 
+.options-container-divider {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 1em;
+  align-items: center; }
+
 .oval-options {
   box-sizing: border-box;
   border: 1px solid gray;
