--- a/src/components/Question/styles/question.scss
+++ b/src/components/Question/styles/question.scss
@@ -11,6 +11,13 @@
     align-items: center;
 }
 
+.options-container-divider {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 1em;
+    align-items: center;
+}
+
 .oval-options {
     box-sizing: border-box;
     border: 1px solid gray;
