--- a/src/styles/breadcrumb-nav.css
+++ b/src/styles/breadcrumb-nav.css
@@ -1,4 +1,4 @@
-footer {
+.bread-crumb-nav {
   width: 100%;
   height: 50;
   display: block;
@@ -9,7 +9,7 @@ footer {
   display: flex;
   justify-content: center;
   z-index: 1; }
-  footer div {
+  .bread-crumb-nav div {
     margin-bottom: 1em;
     position: fixed;
     bottom: 0;
@@ -18,55 +18,47 @@ footer {
     width: 90%;
     background-color: #f5f5f5;
     border-radius: 1em; }
-
-nav {
-  display: table;
-  overflow: hidden;
-  width: 100%;
-  border-radius: 1em; }
-
-ul {
-  display: table-row;
-  list-style: none;
-  text-align: center;
-  width: 100% !important;
-  background-color: #f5f5f5 !important; }
-
-li {
-  display: table-cell;
-  vertical-align: middle; }
-
-.pop-over-item {
-  padding: 0.25rem 1rem;
-  display: block; }
-
-.crumb-link {
-  font-size: 0.8rem;
-  font-weight: 100;
-  display: block;
-  padding: 18px 0;
-  position: relative;
-  white-space: nowrap;
-  color: dimgrey !important;
-  background: #f5f5f5; }
-
-.micasa-nav-logo {
-  width: 80px; }
-
-a,
-a:link,
-a:visited,
-a:hover,
-a:active,
-a:focus {
-  color: #4e74a4 !important;
-  text-decoration: none;
-  cursor: pointer;
-  text-transform: uppercase; }
-
-.active {
-  font-size: 1.35rem;
-  padding: 20px;
-  fontsize: 40px;
-  color: #00bcd4 !important;
-  text-decoration: none; }
+  .bread-crumb-nav nav {
+    display: table;
+    overflow: hidden;
+    width: 100%;
+    border-radius: 1em; }
+  .bread-crumb-nav ul {
+    display: table-row;
+    list-style: none;
+    text-align: center;
+    width: 100% !important;
+    background-color: #f5f5f5 !important; }
+  .bread-crumb-nav li {
+    display: table-cell;
+    vertical-align: middle; }
+  .bread-crumb-nav .pop-over-item {
+    padding: 0.25rem 1rem;
+    display: block; }
+  .bread-crumb-nav .crumb-link {
+    font-size: 0.8rem;
+    font-weight: 100;
+    display: block;
+    padding: 18px 0;
+    position: relative;
+    white-space: nowrap;
+    color: dimgrey !important;
+    background: #f5f5f5; }
+  .bread-crumb-nav .micasa-nav-logo {
+    width: 80px; }
+  .bread-crumb-nav a,
+  .bread-crumb-nav a:link,
+  .bread-crumb-nav a:visited,
+  .bread-crumb-nav a:hover,
+  .bread-crumb-nav a:active,
+  .bread-crumb-nav a:focus {
+    color: #4e74a4 !important;
+    text-decoration: none;
+    cursor: pointer;
+    text-transform: uppercase; }
+  .bread-crumb-nav .active {
+    font-size: 1.35rem;
+    padding: 20px;
+    fontsize: 40px;
+    color: #00bcd4 !important;
+    text-decoration: none; }
