--- a/src/styles/breadcrumb-nav.scss
+++ b/src/styles/breadcrumb-nav.scss
@@ -1,4 +1,4 @@
-footer {
+.bread-crumb-nav {
     width: 100%;
     height: 50;
     display: block;
@@ -19,64 +19,64 @@ footer {
         border-radius: 1em;
     }
     z-index: 1;
-}
 
-nav {
-    display: table;
-    overflow: hidden;
-    width: 100%;
-    border-radius: 1em;
-}
+    nav {
+        display: table;
+        overflow: hidden;
+        width: 100%;
+        border-radius: 1em;
+    }
 
-ul {
-    display: table-row;
-    list-style: none;
-    text-align: center;
-    width: 100% !important;
-    background-color: #f5f5f5 !important;
-}
+    ul {
+        display: table-row;
+        list-style: none;
+        text-align: center;
+        width: 100% !important;
+        background-color: #f5f5f5 !important;
+    }
 
-li {
-    display: table-cell;
-    vertical-align: middle;
-}
+    li {
+        display: table-cell;
+        vertical-align: middle;
+    }
 
-.pop-over-item {
-    padding: 0.25rem 1rem;
-    display: block;
-}
+    .pop-over-item {
+        padding: 0.25rem 1rem;
+        display: block;
+    }
 
-.crumb-link {
-    font-size: 0.8rem;
-    font-weight: 100;
-    display: block;
-    padding: 18px 0;
-    position: relative;
-    white-space: nowrap;
-    color: dimgrey !important;
-    background: #f5f5f5;
-}
+    .crumb-link {
+        font-size: 0.8rem;
+        font-weight: 100;
+        display: block;
+        padding: 18px 0;
+        position: relative;
+        white-space: nowrap;
+        color: dimgrey !important;
+        background: #f5f5f5;
+    }
 
-.micasa-nav-logo {
-    width: 80px;
-}
+    .micasa-nav-logo {
+        width: 80px;
+    }
 
-a,
-a:link,
-a:visited,
-a:hover,
-a:active,
-a:focus {
-    color: #4e74a4 !important;
-    text-decoration: none;
-    cursor: pointer;
-    text-transform: uppercase;
-}
+    a,
+    a:link,
+    a:visited,
+    a:hover,
+    a:active,
+    a:focus {
+        color: #4e74a4 !important;
+        text-decoration: none;
+        cursor: pointer;
+        text-transform: uppercase;
+    }
 
-.active {
-    font-size: 1.35rem;
-    padding: 20px;
-    fontsize: 40px;
-    color: rgb(0, 188, 212) !important;
-    text-decoration: none;
+    .active {
+        font-size: 1.35rem;
+        padding: 20px;
+        fontsize: 40px;
+        color: rgb(0, 188, 212) !important;
+        text-decoration: none;
+    }
 }
