--- a/src/styles/breadcrumb-nav.css
+++ b/src/styles/breadcrumb-nav.css
@@ -1,3 +1,10 @@
+.pop-over-item {
+  padding: 0.25rem 1rem;
+  display: block;
+  list-style: none !important; }
+  .pop-over-item li {
+    list-style: none !important; }
+
 .bread-crumb-nav {
   width: 100%;
   height: 50;
@@ -30,11 +37,9 @@
     width: 100% !important;
     background-color: #f5f5f5 !important; }
   .bread-crumb-nav li {
+    list-style-type: none;
     display: table-cell;
     vertical-align: middle; }
-  .bread-crumb-nav .pop-over-item {
-    padding: 0.25rem 1rem;
-    display: block; }
   .bread-crumb-nav .crumb-link {
     font-size: 0.8rem;
     font-weight: 100;
