--- a/src/styles/breadcrumb-nav.scss
+++ b/src/styles/breadcrumb-nav.scss
@@ -1,3 +1,12 @@
+.pop-over-item {
+    padding: 0.25rem 1rem;
+    display: block;
+    list-style: none !important;
+    li {
+        list-style: none !important;
+    }
+}
+
 .bread-crumb-nav {
     width: 100%;
     height: 50;
@@ -36,13 +45,9 @@
     }
 
     li {
+        list-style-type: none;
         display: table-cell;
         vertical-align: middle;
-    }
-
-    .pop-over-item {
-        padding: 0.25rem 1rem;
-        display: block;
     }
 
     .crumb-link {
